--- a/manipulate-dom.html
+++ b/manipulate-dom.html
@@ -8,6 +8,7 @@
   <body>
     <script>
       console.log("Vi øver på branching!");
+      console.log("Tester commit and push");
     </script>
   </body>
 </html>
